--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-pdo": "*",
         "ext-pdo_mysql": "*",
         "ext-tokenizer": "*",
+        "barryvdh/laravel-cors": "^0.11.0@dev",
         "barryvdh/laravel-dompdf": "^0.8.0@dev",
         "dimsav/laravel-translatable": "^9.0",
         "doctrine/dbal": "^2.9@dev",
